added more items

--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 </div>
 <div class="gray" style="position: absolute; top: 0px; left: 320px;">
 <a id="skill1"></a><br>
-<a id="skill2"></a>
+<a id="skill2"></a><br>
+<a id="skill3"></a><br>
+<a id="skill4"></a><br>
 </div>
 </div>
 
