significant dev progress
- reorganized class files & skill info
- multiple active skills can now be selected (WIP)
- added more uniques

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 
 <div class="none" style="position: absolute; top: 0px; left: 430px;">
 	<a>Attack Rating: </a><a id="ar"></a><br>
-	<a style="visibility: hidden;">AR: </a><a id="ar_skill1"></a><br>
-	<a style="visibility: hidden;">AR: </a><a id="ar_skill2"></a>
+	<a id="ar_skill1"></a><br>
+	<a id="ar_skill2"></a>
 </div>
 
 <div style="float: left; position: relative; width: 321px; height: 434px; margin-bottom: 36px;">
