skill selection setup - completed for Amazon

--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 <!--<a style="visibility:visible;">Chance to Hit: </a><a id="hit"></a><br>-->
 	<a>Basic Attack: </a><a id="basic_attack"></a><br>
 	<div class="none" id="skillDetail1" style="height: 22px; width: 300px; position: relative; z-index: 4;">
-	<select class="none" id="dropdown_skill1" onChange="checkSkill(this.value, 1)"><option class="gray-all" disabled selected> ­ ­ ­ ­ Skill 1</option></select><a id="skill1_info">: </a>
+	<select class="none" id="dropdown_skill1" onChange="checkSkill(this.value, 1)" oncontextmenu="checkSkill(' ­ ­ ­ ­ Skill 1', 1)"><option class="gray-all" disabled selected> ­ ­ ­ ­ Skill 1</option></select><a id="skill1_info">: </a>
 	</div>
 	<div class="none" id="skillDetail2" style="height: 22px; width: 275px; position: relative; z-index: 4;">
-	<select class="none" id="dropdown_skill2" onChange="checkSkill(this.value, 2)"><option class="gray-all" disabled selected> ­ ­ ­ ­ Skill 2</option></select><a id="skill2_info">: </a>
+	<select class="none" id="dropdown_skill2" onChange="checkSkill(this.value, 2)" oncontextmenu="checkSkill(' ­ ­ ­ ­ Skill 2', 2)"><option class="gray-all" disabled selected> ­ ­ ­ ­ Skill 2</option></select><a id="skill2_info">: </a>
 	</div>
 </div>
 
