--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 	<a>Mana: </a><a id="mana"></a><br>
 	<a>Stamina: </a><a id="stamina"></a><br>
 	<a>Defense: </a><a id="defense"></a><br>
-	<a style="visibility:visible;">Block Chance: </a><a id="block"></a>
+	<a id="block_label" style="visibility:visible;">Block Chance: </a><a id="block"></a>
 </div>
 <div class="gray" style="position: absolute; top: 0px; left: 150px; width: 200px;">
 <!--<a style="visibility:visible;">Damage per Second: </a><a id="dps"></a><br>-->
