--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 <link rel="stylesheet" type="text/css" href="./data/all.css">
 <script type="text/javascript" src="./data/all_equipment.js"></script>
-<script type="text/javascript" src="./data/z_extra_skills.js"></script>
 <script type="text/javascript" src="./data/all.js"></script>
 <!--
 <style type="text/css">
@@ -385,11 +384,12 @@
 
 <script type="text/javascript" src="./data/amazon.js"></script>
 <script type="text/javascript" src="./data/assassin.js"></script>
-<script type="text/javascript" src="./data/necromancer.js"></script>
 <script type="text/javascript" src="./data/barbarian.js"></script>
+<script type="text/javascript" src="./data/druid.js"></script>
+<script type="text/javascript" src="./data/necromancer.js"></script>
 <script type="text/javascript" src="./data/paladin.js"></script>
 <script type="text/javascript" src="./data/sorceress.js"></script>
-<script type="text/javascript" src="./data/druid.js"></script>
+<script type="text/javascript" src="./data/universal_skills.js"></script>
 
 <script>
 
