--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 <select class="dropdown" id="dropdown_offhand" onChange="equip('offhand', this.value)" onContextMenu="equip('offhand', 'offhand')"></select>
 <br><br>
 <select class="dropdown" id="dropdown_charms" onChange="addCharm(this.value)"></select>
+<select class="dropdown" id="dropdown_socketables" onChange="addSocketable(this.value)"></select>
 <br><br>
 <select class="dropdown" id="dropdown_mercenary" onChange="setMercenary(this.value)" onContextMenu="setMercenary('­ ­ ­ ­ Mercenary')"></select>
 <select class="dropdown" id="dropdown_merc_helm" onChange="equipMerc('helm', this.value)" onContextMenu="equipMerc('helm', 'helm')"></select>
@@ -331,13 +332,12 @@
 	<font size="2">Light Radius: </font><font size="2" id="light_radius"></font><br>
 	<font size="2">Heal Stamina: </font><font size="2" id="heal_stam"></font><br>
 	<font size="2">Slower Stamina Drain: </font><font size="2" id="slower_stam_drain"></font><br>
-	<font size="2">Life per Demon Kill: </font><font size="2" id="life_per_demon_kill"></font><br>
 	<font size="2">Slow Target: </font><font size="2" id="slow_target"></font><br>
 	<font size="2">Enemy Defense: </font><font size="2" id="enemy_defense"></font><br>
 	<font size="2">Monster Defense per Hit: </font><font size="2" id="monster_defense_per_hit"></font><br>
 	<font size="2">Flee on Hit:  </font><font size="2" id="flee_on_hit"></font><br>
 	<font size="2">Blind on Hit: </font><font size="2" id="blind_on_hit"></font><br>
-	<font size="2">Merchant Discount: </font><font size="2" id="discount"></font><br>
+	<font size="2" id="discount"></font><br>
 </div>
 <<div class="gray" style="position: relative; display: block; float: left; width: 200px;" id="stats4b">
 	<font size="2" id="itd"></font><br>
